[package]
name = "census"
version = "0.4.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = []
description = """Keeps an inventory of living objects"""
homepage = "https://github.com/tantivy-search/census"
repository = "https://github.com/tantivy-search/census"
readme = "README.md"
keywords = ["inventory"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
